Opened 9 years ago

Closed 9 years ago

Last modified 9 years ago

#12359 closed bug (fixed)

[Interface Kit] BMenuField label background is not highlighted anymore

Reported by: diver Owned by: axeld
Priority: normal Milestone: Unscheduled
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by jscipione)

hrev49617.

Highlighting was added in hrev45983. Stopped working in hrev49614, specifically after this commit.

Change History (3)

comment:1 by jscipione, 9 years ago

Description: modified (diff)
Resolution: fixed
Status: newclosed

comment:2 by jscipione, 9 years ago

Description: modified (diff)

comment:3 by jscipione, 9 years ago

Fixed in hrev49685

(didn't mean to change the description)

Note: See TracTickets for help on using tickets.