Restore the BMenuField label background

Highlighting was added in hrev45983, stopped working in hrev49614, specifically
d8919236503108a2db13c454109d7c7696677514.

Add comment to explain what is happening and hopefully deter this from being
removed again in the future.

Fixes #12359